# HALO

./: .gitmodules  README.md  build_workspace.sh  requirements.txt
aerial_sim_ros2/unity_interface/: CMakeLists.txt
aerial_sim_ros2/unity_interface/config/: unity_sim_config.yaml
aerial_sim_ros2/unity_interface/launch/: endpoint.launch.py  sim.launch.py
air_sem_explorer/: package.xml  setup.cfg  setup.py
air_sem_explorer/air_sem_explorer/mapper/: frontier_detector.py  frontier_visualizer.py  occ_map.py
air_sem_explorer/air_sem_explorer/node/: mapper_node.py  planner_node.py  sim_tracker_node.py  tf_handler_node.py
air_sem_explorer/air_sem_explorer/planner/: exploration_planner.py  path_tracker.py  sim_tracker.py  state_machine.py
air_sem_explorer/air_sem_explorer/utils/: evaluation_logger.py  utils.py
air_sem_explorer/config/: map_common.yaml  mapper.rviz  mapper_ros_sim.yaml  mapper_ros_sim_vggt.yaml  planner_ros_robot.yaml  planner_ros_sim.yaml  planner_ros_sim_vggt.yaml  tf_handler_ros_robot.yaml  tf_handler_ros_sim.yaml
air_sem_explorer/launch/: mapper.launch.py  mapper_robot.launch.py  mapper_sim_vggt.launch.py  mapper_sim_with_vis.launch.py  planner.launch.py  planner_robot.launch.py  planner_vggt.launch.py  sim_tracker.launch.py  sim_tracker_vggt.launch.py  tf_handler_robot.launch.py  tf_handler_sim.launch.py
air_sem_explorer/scripts/: distance_util.py
air_sem_explorer/tmux/: bag.yaml  robot.yaml  sim.yaml  sim_vggt.yaml
air_sem_explorer_interfaces/: CMakeLists.txt  package.xml
air_sem_explorer_interfaces/msg/: Frontier.msg
air_sem_gridmap/: package.xml  setup.cfg  setup.py
air_sem_gridmap/air_sem_gridmap/: sem_gridmap.py
air_sem_gridmap/air_sem_gridmap/naradio/: base.py  naradio.py
air_sem_gridmap/air_sem_gridmap/node/: sem_gridmap_node.py
air_sem_gridmap/config/: config.yaml
air_sem_gridmap/launch/: sem_gridmap.launch.py  sem_gridmap_robot.launch.py  sem_gridmap_sim_vggt.launch.py  task_interface.launch.py
air_sem_gridmap/scripts/: set_prompt_client.py
air_sem_gridmap_interfaces/: CMakeLists.txt  package.xml
air_sem_gridmap_interfaces/msg/: RelevancyMap.msg
air_sem_gridmap_interfaces/srv/: SetPrompt.srv  SetTask.srv  TerminationResult.srv
docker/: ase_robot.Dockerfile  ase_sim.Dockerfile  build_robot.sh  build_sim.sh  run.sh  run_robot.sh  run_sim.sh
driver_launch_pkg/: package.xml  setup.cfg  setup.py
driver_launch_pkg/launch/: driver_launch.launch.py
vggt_mapper/: .gitignore  .gitmodules  README.md  package.xml  setup.cfg  setup.py
vggt_mapper/VGGT-SLAM/: requirements.txt  setup.sh
vggt_mapper/VGGT-SLAM/vggt_slam/: loop_closure.py  map.py  solver.py
vggt_mapper/config/: vggt_mapper_robot.yaml  vggt_mapper_sim.yaml
vggt_mapper/launch/: vggt_mapper_robot.launch.py  vggt_mapper_sim.launch.py
vggt_mapper/resource/: vggt_mapper
vggt_mapper/vggt_mapper/: __init__.py  scale_estimation.py  vggt_mapper_node.py
