<?xml version="1.0"?>
<package format="3">
  <name>air_sem_gridmap</name>
  <version>0.1.0</version>
  <description>Aerial semantic grid mapping</description>
  <maintainer email="dexterong94@gmail.com">Dexter Ong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs_py</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 